# Support-Desk

./: .env.example  .vercelignore  Procfile  README.md  VIDEO_SCRIPT.md  agents_pipeline.py  pyproject.toml  requirements.txt  server.py  vercel.json
synthetic_data/: kb.md
synthetic_data/tickets/: 01_refund_angry.txt  02_shipping_delay.txt  03_password_howto.txt  04_double_charge.txt  05_feature_request.txt
web/: app.js  index.html  style.css
