[project]
name = "supportdesk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.1.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
]

[tool.vercel]
entrypoint = "server:app"
